--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ wheels/
 # Virtual environments
 .venv
 
-main.build
-main.dist
-main.onefile-build
+main.build/
+main.dist/
+main.onefile-build/
+dist/
